k8s/modovolo-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modovolo-frontend
  namespace: fleet
  labels:
    app: modovolo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modovolo-frontend
  template:
    metadata:
      labels:
        app: modovolo-frontend
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: modovolo-frontend
          image: jmarji/modovolo-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: modovolo-frontend-config
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: modovolo-frontend-config
          configMap:
            name: modovolo-frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: modovolo-frontend
  namespace: fleet
  labels:
    app: modovolo-frontend
spec:
  selector:
    app: modovolo-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
